# mirror

./: .gitignore  LICENSE  README.md  dashboard.html  index.html  pyproject.toml
mirror/: __init__.py
mirror/cli/: main.py
mirror/core/: agent.py  executor.py  insight_engine.py  llm.py  loop.py  tool_developer.py
mirror/memory/: memory.py
mirror/web/: server.py
